# paa-gimp-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  paa-gimp-plugin.cpp  paa-gimp-plugin.h
